correçao de links da pagina doaçao e contatos

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <img src="https://static.wixstatic.com/media/eee5c2_0be69f4184e9448d997746df67bc0a20~mv2.png/v1/fill/w_138,h_75,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/logo%20laranja_edited_edited_edited_edited.png" alt="logo laranja_edited_edited_edited_edited" style="width:138px;height:75px;object-fit:cover" width="138" height="75" srcset="https://static.wixstatic.com/media/eee5c2_0be69f4184e9448d997746df67bc0a20~mv2.png/v1/fill/w_138,h_75,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/logo%20laranja_edited_edited_edited_edited.png" fetchpriority="high">
             <nav>
                 <ul class="menu">
-                    <li><a href="http://127.0.0.1:5500/Doacão.html/Doação.html">Doações</a></li> 
-                    <li><a href="#">Doação de animais</a></li>
+                    <li><a href="pages/donation/index.html">Doações</a></li> 
+                    <li><a href="pages/contact/index.html">Contatos</a></li>
                 </ul>   
             </nav>  
         </div>
