corrigido arquivo contato

--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -8,10 +8,8 @@
 <body>
     <div>
         <div>
-             <h1>ola    </h1>
-
+             <h1>ola bom dia</h1>
         </div>
     </div>
-    
 </body>
 </html>
