arrumado espaços e começado aba contact

--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -3,13 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contatos</title>
+    <title>Pagina Contato</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #ffffff;
+        }
+        header {
+            background-color: #bd8a00;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+        }
+        nav {
+            background-color: #ffbb00;
+            padding: 10px;
+            text-align: end;
+        }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        section {
+            padding: 20px;
+            text-align: center;
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-    <div>
-        <div>
-             <h1>ola bom dia</h1>
-        </div>
-    </div>
+    <header>
+        <h1>Minha Página
+            <a href="#">Sobre</a>
+            <a href="#">Doação</a>
+        </h1>
+    </header>
+    <nav>
+        <a href="#">Sobre</a>
+        <a href="index.html">Doação</a>
+    </nav>
+    <section>
+        <h2>CONTATO</h2>
+        <p>Esta é uma página básica criada em HTML.</p>
+    </section>
+    <footer>
+        <p>&copy; 2024 Minha Página</p>
+    </footer>
 </body>
 </html>
