pagina de cotato 80% pronta

--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -3,28 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Contato</title>
+    <title>Contatos</title>
     <link rel="stylesheet" href="../../styles/stylescontact.css">
 
-</head>
 <body>
     <header>
-        <img src="" alt="">
-        <h1>Minha Página
-            <a href="#">Sobre</a>
-            <a href="#">Doação</a>
-        </h1>
+        <div class="header-container">
+            <img src="images/cao_sem_dono_logo.png" alt="logo laranja_edited_edited_edited_edited"
+                style="width:138px;height:75px;object-fit:cover" width="138" height="75"
+                srcset="https://static.wixstatic.com/media/eee5c2_0be69f4184e9448d997746df67bc0a20~mv2.png/v1/fill/w_138,h_75,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/logo%20laranja_edited_edited_edited_edited.png"
+                fetchpriority="high">
+            <nav>
+                <ul class="menu">
+                    <li><a href="../../pages/donation/index.html">Doações</a></li>
+                    <li><a href="../../index.html">Sobre</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <nav>
-        <a href="#">Sobre</a>
-        <a href="index.html">Doação</a>
-    </nav>
-    <section>
-        <h2>CONTATO</h2>
-        <p>Esta é uma página básica criada em HTML.</p>
-    </section>
+    <main>
+        <section>
+            <h2><em>CONTATO</em></h2>
+            <p>
+
+                <p class="orange-text">ENDEREÇO DOS NOSSOS ABRIGOS <br>
+                </p>
+                <p>Não divulgamos publicamente o endereço de nossos abrigos. Lamentavelmente o número de abandonos em
+                nossas portas ainda é alto. Para aqueles que abandonam seus animais, informamos que instalamos câmeras
+                de segurança em todos os nossos espaços.</p>
+                <p><b>Clínica Veterinária Popular Cão Sem Dono</b></p>
+                <p>Rua Honório Serpa, 259, Jardim Vergueiro, SP</p>
+                <p class="darkorange-text">clinica@caosemdono.com.br</p>
+                <p><strong>Bazar Permanente da ONG Cão Sem Dono</strong></p>
+                <p>Rua Vitor Emanuel, 200, Sacomã, SP
+                    Aberto de segunda a sexta-feira das 9 às 18 horas
+                    Sábados, das 9 às 13 horas.
+                    <p class="darkorange-text">Para doar:faleconosco@caosemdono.com.br</p> </P><br><br>
+                <p class="orange-text">CONTATOS POR E-MAIL<br><br></p>
+                <b>Fale com o Presidente</b>: rafael@caosemdono.com.br<br><br>
+                <b>Geral:</b> faleconosco@caosemdono.com.br<br><br>
+                <b>Apadrinhamento</b>: apadrinhamento@caosemdono.com.br<br><br>
+                <b>Adoção de Animais</b>: valeria@caosemdono.com.br<br><br>
+                <b>Espaço para eventos</b>: aline@caosemdono.com.br<br><br>
+                <b>Doações para o bazar/ração/remédios</b>: faleconosco@caosemdono.com.br<br><br>
+                <b>Reclamações e sugestões</b>: rafael@caosemdono.com.br<br><br>
+                <b>Observação</b>: No momento não estamos realizando resgates solicitados por e-mail ou telefone. <br><br>
+                Para casos emergenciais, ligue para o número 156 (Prefeitura de São Paulo).<br><br><br><br><br><br><br><br><br>
+            </p>
+        </section>
+        </div>
+        </div>
+    </main>
     <footer>
-        <p>&copy; 2024 Minha Página</p>
+        <div class="footer-content">
+            <ul>
+                <p1>Siga-nos nas redes sociais:</p1>
+            </ul>
+            <div class="social-icons">
+                <a href="https://www.instagram.com/caosemdono.oficial/"><img src="../../images/intagram_logo.png"
+                        alt="Instagram"></a>
+                <a href="https://twitter.com/caosemdono"><img src="../../images/twitter_logo.png"
+                        alt="Rede Social X"></a>
+                <a href="https://www.facebook.com/caosemdono"><img src="../../images/facebook_logo.png"
+                        alt="Facebook"></a>
+                <a href="https://www.tiktok.com/@caosemdono.oficial"><img src="../../images/tiktok_logo.png"
+                        alt="Instagram"></a>
+            </div>
+            <div class="contact-info">
+                <h3>Entre em Contato</h3>
+                <p2>Telefone: (11) 94484-2341</p2><br>
+                <p3>Email: faleconosco@caosemdono.com.br</p3>
+            </div>
+        </div>
+        <img src="../../images/cao_sem_dono_logo.png" alt="Descrição da imagem" class="center">
+        </div>
     </footer>
 </body>
 </html>
