90% da aba contact finalizada e começo da aba donation

--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -9,9 +9,8 @@
 <body>
     <header>
         <div class="header-container">
-            <img src="images/cao_sem_dono_logo.png" alt="logo laranja_edited_edited_edited_edited"
-                style="width:138px;height:75px;object-fit:cover" width="138" height="75"
-                srcset="https://static.wixstatic.com/media/eee5c2_0be69f4184e9448d997746df67bc0a20~mv2.png/v1/fill/w_138,h_75,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/logo%20laranja_edited_edited_edited_edited.png"
+            <img src="../../images/cao_sem_dono_logo.png" alt="cao_sem_dono_logo"
+
                 fetchpriority="high">
             <nav>
                 <ul class="menu">
