--- a/pages/donation/index.html
+++ b/pages/donation/index.html
@@ -1,12 +1,70 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styless.css">
+    <link rel="stylesheet" href="../../styles/sylesdonation.css">
     <title>Doação</title>
 </head>
-<body>ola   
-    
+
+<body>
+    <div>
+        <header>
+            <div class="header-container">
+                <img src="../../images/cao_sem_dono_logo.png" alt="cao_sem_dono_logo" width="300" height="100" class="imagem_logo">
+                <nav>
+                    <ul class="menu">
+                        <li><a href="../../pages/donation/index.html">Doações</a></li>
+                        <li><a href="../../index.html">Sobre</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+    </div>
+    <p>
+    <p class="orange-text">DOAÇÕES</p>
+    <P class="orange-text">COMO AJUDAR</P>
+    <p class="text_left">Existem muitas formas de nos<br> ajudar a cuidar dos
+        mais de 450 cães que cuidamos <br>e alimentamos todos
+        os dias, fora os cães que ajudamos<br> a sustentar de
+        outros protetores.</p><br>
+    <P class="text_left">Você pode doar ração, cobertores, medicamentos, material<br> de limpeza e de procedimento,
+        artigos para
+        nosso Bazar<br> permanente ou fazer uma doação em
+        dinheiro, o que nos ajuda<br> no pagamento de despesas
+        como conta de água, luz, telefone,<br> internet,
+        funcionários, impostos, compra de ração, medicamentos,<br> veterinários, exames laboratoriais,
+        procedimentos cirúrgicos,<br> combustível, feiras de
+        adoção, entre tantas outras.</P><br>
+    <p class="text_left">Cada feira de adoção tem custo hoje de R$ 100,00
+        (cem reais), pois<br> há gastos com banho nos animais,
+        transporte e funcionários.</p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </p>
+    <footer>
+        <div class="footer-content">
+            <ul>
+                <p1>Siga-nos nas redes sociais:</p1>
+            </ul>
+            <div class="social-icons">
+                <a href="https://www.instagram.com/caosemdono.oficial/"><img src="../../images/intagram_logo.png"
+                        alt="Instagram"></a>
+                <a href="https://twitter.com/caosemdono"><img src="../../images/twitter_logo.png"
+                        alt="Rede Social X"></a>
+                <a href="https://www.facebook.com/caosemdono"><img src="../../images/facebook_logo.png"
+                        alt="Facebook"></a>
+                <a href="https://www.tiktok.com/@caosemdono.oficial"><img src="../../images/tiktok_logo.png"
+                        alt="Instagram"></a>
+            </div>
+            <div class="contact-info">
+                <h3>Entre em Contato</h3>
+                <p2>Telefone: (11) 94484-2341</p2><br>
+                <p3>Email: faleconosco@caosemdono.com.br</p3>
+            </div>
+        </div>
+        <img src="../../images/cao_sem_dono_logo.png" alt="Descrição da imagem" class="center">
+        </div>
+    </footer>
 </body>
+
 </html>
