aba de doaçoes 80% pronto ,começando js no site

--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <section>
-            <h2><em>CONTATO</em></h2>
+            <h2 class="faixa"><em>CONTATO</em></h2>
             <p>
 
                 <p class="orange-text">ENDEREÇO DOS NOSSOS ABRIGOS <br>
