--- a/pages/donation/index.html
+++ b/pages/donation/index.html
@@ -40,7 +40,8 @@
                 (cem reais), pois há gastos com banho nos animais,
                 transporte e funcionários.</p>
             </p>
-            <img src="../../images/cao_sem_dono_logo.png" alt="">
+            <img src="../../images/picpay_logo.png" alt="picpay">
+            <img src="../../images/qrcode.png" alt="qrcode">
         </div>
         <div class="coluna_form">
             <form onsubmit="enviar()" class="form">
@@ -74,7 +75,7 @@
                     <p class="input_text">
                         Email:
                     </p>
-                    <input type="email" class="input" id="data">
+                    <input type="email" class="input" id="email">
                 </div>
                 <div class="div_input">
                     <p class="input_text">
@@ -90,7 +91,7 @@
                         <p class="text_money">
                             R$
                         </p>
-                        <input type="number" class="input_money" id="doacao">
+                        <input type="number" class="input_money" id="money">
                     </div>
 
                 </div>
